--- a/开题/开题报告/main.tex
+++ b/开题/开题报告/main.tex
@@ -30,10 +30,21 @@
 \end{abstract}
 
 \section{应用背景}
+近年来，随着计算机辅助设计、计算机辅助学习的逐渐普及，VR设备的逐渐普及，三维动画和三维游 戏的流行，互联网上的三维模型数量急剧增长。然而，三维模型具有的拓扑信息、空间结构难以用文字表达出来。检索三维模型成为了一个较为重要的问题。  
+
+目前已有的一些技术，例如基于文字描述的模型检索、基于二维草图的模型检索、基于内容的模型检索等都有各自的缺点，不能够满足一些特定的使用场景，因此我们希望能够通过基于VR简笔画的模型检索方法来填补前面几种检索方法中不足之处，优化特定场景下的模型检索，提升用户体验。
 
 \section{用户分析}
+\begin{itemize}
+    \item 学生  
+    基于安全、经济等方面的考虑，有时会让学生在VR下学习做实验。各种实验的实验器具具有高度重复性（烧杯、刻度尺、酒精灯……），但是数量却不具有确定性。为每一个实验事先设定好实验器具又是一个不经济且死板的做法。因此在VR环境下，为学生提供一个快速的模型检索方法来查找常用的实验器具是有意义的。
+    \item 设计人员
+    
+\end{itemize}
+
 
 \section{设计方案}
+基于用户画出的VR简笔画来检索模型，是较为友好的一种交互方式。通过处理用户画出的VR简笔画得到的信息来匹配数据库中的三维模型并将
 
 \section{创新点}
 \subsection{类似的其他产品}
