--- a/开题/资料/基于二维草图的三维模型检索方法.md
+++ b/开题/资料/基于二维草图的三维模型检索方法.md
@@ -50,3 +50,33 @@
   1. 对二维图像在P个预定方向上施加**Gabor滤波**
   2. 对每个滤波图像均匀取**Y个采样点**，在Y个局部区域内划分层次结构计算出**形状梯度直方图HOG**
   3. 将P个滤波图像中同一采样区域的HOG顺序连接，得到**Y个特征向量**
+
+
+
+### 基于二维草图的三维模型检索方法3
+
+- [论文链接](https://patents.google.com/patent/CN103902657A/zh)
+
+- 基本方法：
+
+  1. 对数据库中的三维模型提取视角轮廓图
+  2. 对视角轮廓图提取KRD特征，建立特征数据库中。
+  3. 对用户输入的草绘图提取草绘图KRD特征
+  4. 通过EMD特征匹配的方法找到数据库中与草绘图相似的视角轮廓图，进而确定出视角轮廓图对应的三维模型。
+
+- 流程图：
+
+  ![](assets/3.png)
+
+- 三维模型的二维视角轮廓视图：
+
+  1. 对3D模型进行渲染
+  2. 在多视角方向进行投影，产生视角轮廓图
+
+- 结构分布特征KRD
+
+  1. 对视角轮廓图进行矢量化处理得到**矢量轮廓图**
+  2. 找出矢量轮廓图中的关键结构，记录每一个**关键结构**的位置
+  3. 将关键结构在**极坐标下的空间分布直方图**作为特征KRD
+
+- EMD匹配算法
