--- a/开题/资料/基于手绘草图部件分割的三维模型检索系统及方法.md
+++ b/开题/资料/基于手绘草图部件分割的三维模型检索系统及方法.md
@@ -10,7 +10,7 @@
 
 ## 系统模块
 
-![pipeline](assets\cn-2.png)
+![pipeline](assets/cn-2.png)
 
 1. 预处理模块：  
     处理手绘草图。  
@@ -27,7 +27,7 @@
 
 ## 具体实施方式
 
-![method](assets\cn-1.png)
+![method](assets/cn-1.png)
 
 1. S501：由于用户草图往往不够准确，所以对手绘的查询草图进行必要的预处理
 
