--- a/开题/开题报告/main.tex
+++ b/开题/开题报告/main.tex
@@ -59,7 +59,13 @@
 
 \section{设计方案}
 \subsection{设计简述}
-基于用户画出的VR简笔画来检索模型，是较为友好的一种交互方式。通过处理用户画出的VR简笔画得到的二维信息，并通过二维信息来匹配数据库中的三维模型，从而达到模型检索的目的。  
+基于用户画出的VR简笔画来检索模型，是较为友好的一种交互方式。通过处理用户画出的VR简笔画得到的二维信息，并通过二维信息来匹配数据库中的三维模型，从而达到模型检索的目的。
+
+\subsection{功能流程}
+完成作画=>
+数据传输与处理=>
+反馈与选择=>
+最终呈现
 
 \subsection{VR交互部分}
 VR交互部分可以借鉴google tile brush，为用户提供一个交互便捷的作画系统。该系统需要帮助用户快速完成简笔画，并且将得到的用户数据传输到模型检索模块。
