中期：文档及PPT

--- a/中期/模型检索.md
+++ b/中期/模型检索.md
@@ -96,7 +96,7 @@
 
 考虑到**SIFT（Scale-invariant feature transform）**特征具有尺度不变性，而且即使改变旋转角度，图像亮度或拍摄视角，仍然能够得到好的检测效果，符合我们在输入端和数据库具有不同尺度的图片这一现实情况，我们尝试了提取图片的SIFT特征
 
-- 代码文件：`sift提取模型特征点/test.py`
+- 代码文件：`sift/test.py`
 
 - 对原始视图图片检测结果：
 
